--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,75 @@ html {
 }
 body {
   font-size: 1.6rem;
+  font-family: "Sen", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+.btn {
+  display: inline-block;
+  min-width: 118px;
+  line-height: 50px;
+  padding: 0px 16px;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 24.5px;
+  font-size: 1.6rem;
+  background: #171100;
+  text-align: center;
+}
+.main-content {
+  width: 1170px;
+  max-width: calc(100% - 48px);
+  margin-left: auto;
+  margin-right: auto;
+}
+/* ===================header=================== */
+.header{
+  background-color: #FFFCF4;
+}
+.header.fixed{
+  position: sticky;
+  top: -28px;
+}
+.header .body {
+  display: flex;
+  align-items: center;
+  padding: 36px 0px 8px;
+}
+.nav {
+  margin-left: auto;
+}
+.nav ul {
+  display: flex;
+}
+.nav a {
+  color: #5f5b53;
+  font-size: 1.6rem;
+  letter-spacing: 0%;
+  padding: 8px 21px;
+  position: relative;
+}
+.nav li.active a,
+.nav a:hover {
+  color: #171100;
+  /* font-weight: 600; */
+  text-shadow: 1px 0 0 currentColor;
+}
+.nav li.active a::after {
+  position: absolute;
+  content: "";
+  width: 12px;
+  height: 2px;
+  background-color: #171100;
+  border-radius: 1px;
+  display: block;
+  left: 21px;
+  bottom: 6px;
+}
+.header .btn-sign-up{
+  min-width: 144px;
+}
+.header .action{
+  margin-left: 49px;
 }
