--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,16 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --font-heading: "Sen", sans-serif;
+  --primary-color: #ffb900;
+}
 html {
   font-size: 62.5%;
 }
 body {
   font-size: 1.6rem;
-  font-family: "Sen", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 a {
   text-decoration: none;
@@ -18,10 +22,13 @@ a {
   padding: 0px 16px;
   color: #fff;
   font-weight: 600;
-  border-radius: 24.5px;
+  border-radius: 9999px;
   font-size: 1.6rem;
   background: #171100;
   text-align: center;
+}
+.btn:hover {
+  opacity: 0.9;
 }
 .main-content {
   width: 1170px;
@@ -30,12 +37,13 @@ a {
   margin-right: auto;
 }
 /* ===================header=================== */
-.header{
-  background-color: #FFFCF4;
+.header {
+  background-color: #fffcf4;
 }
-.header.fixed{
+.header.fixed {
   position: sticky;
   top: -28px;
+  z-index: 1;
 }
 .header .body {
   display: flex;
@@ -72,9 +80,146 @@ a {
   left: 21px;
   bottom: 6px;
 }
-.header .btn-sign-up{
+.header .btn-sign-up {
   min-width: 144px;
 }
-.header .action{
+.header .action {
   margin-left: 49px;
+}
+/* ===============hero============== */
+.hero {
+  padding: 56px 0 65px;
+  background-color: #fffcf4;
+}
+.hero .body {
+  display: flex;
+}
+/* ==========khối bên trái=========== */
+.hero .media-block {
+  width: 48%;
+  position: relative;
+}
+
+.hero .media-block .img {
+  width: 470px;
+  height: 685px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+.hero .hero-summary {
+  position: absolute;
+  bottom: 48px;
+  right: 0;
+  background: #fff;
+  border-radius: 12px;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+  width: 270px;
+  padding: 24px;
+}
+.hero-summary .item {
+  display: flex;
+  align-items: center;
+}
+.hero-summary .item + .item {
+  margin-top: 22px;
+}
+.hero-summary .icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff9e8;
+}
+.hero-summary .icon2 {
+  background-color: #fcefff;
+}
+.hero-summary .icon3 {
+  background-color: #ebeaff;
+}
+.hero-summary .info {
+  margin-left: 16px;
+}
+.hero-summary .label {
+  font-size: 14px;
+  line-height: 1.86;
+  color: #5f5b53;
+}
+.hero-summary .title {
+  color: #171100;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.67;
+}
+/* ============khối bên phải============== */
+.hero .content-block {
+  width: 52%;
+  padding-left: 130px;
+  padding-top: 64px;
+}
+.hero .heading {
+  font-family: var(--font-heading);
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 1.17;
+  letter-spacing: -2%;
+  color: #171100;
+}
+.hero .desc {
+  margin-top: 22px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.67;
+}
+.hero .cta-group {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+}
+.hero-cta {
+  min-width: 180px;
+  line-height: 64px;
+  background-color: var(--primary-color);
+}
+.hero .watch-video {
+  border: none;
+  background-color: transparent;
+  display: flex;
+  margin-left: 29px;
+  align-items: center;
+  cursor: pointer;
+}
+.hero .watch-video .icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background: #fff;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.07);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hero .watch-video span {
+  color: #171100;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.67;
+  margin-left: 14px;
+}
+.hero .desc-recent {
+  margin-top: 48px;
+}
+.hero .stats{
+  margin-top: 8px;
+}
+.hero .stats strong {
+  font-family: var(--font-heading);
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 1.23;
+  margin-right: 15px;
+}
+.hero .stats strong:nth-child(2){
+  margin-left: 22px;
 }
