--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ a {
 }
 .btn:hover {
   opacity: 0.9;
+  cursor: pointer;
 }
 .main-content {
   width: 1170px;
@@ -248,16 +249,16 @@ a {
 
   line-height: 1.67;
 }
-.popular-top{
+.popular-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.popular-top .controls{
+.popular-top .controls {
   display: flex;
   gap: 18px;
 }
-.popular-top .controls-btn{
+.popular-top .controls-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -268,8 +269,84 @@ a {
   border: 1px solid var(--primary-color);
   color: var(--primary-color);
 }
-.popular-top .controls-btn:hover{
+.popular-top .controls-btn:hover {
   background-color: var(--primary-color);
   color: #fff;
   cursor: pointer;
+}
+.popular .course-item {
+  border-radius: 12px;
+  background: #fff;
+  border: 1px solid #e2dffa;
+}
+.popular .course-item:hover {
+  border: 1px solid transparent;
+  border-radius: 12px;
+  background-color: #fff;
+  box-shadow: 0 18px 36px 0 rgba(0, 0, 0, 0.05);
+}
+.popular .course-list {
+  display: flex;
+  margin-top: 55px;
+  gap: 30px;
+}
+.popular .course-item .thump {
+  /* width: 100%; */
+  border-radius: 12px 12px 0px 0px;
+  width: 370px;
+  height: 278px;
+}
+.popular .course-item .info {
+  padding: 16px 22px 22px;
+}
+.popular .course-item .foot,
+.popular .course-item .rating,
+.popular .course-item .head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.popular .course-item .title a{
+  color: #171100;
+  font-weight: 600;
+
+  font-size: 18px;
+
+  line-height: 1.67;
+}
+.popular .rating .value {
+  margin-left: 6px;
+  color: #fea31b;
+  font-weight: 400;
+
+  font-size: 16px;
+
+  line-height: 1.75;
+}
+.popular .course-item .desc {
+  font-weight: 400;
+
+  font-size: 14px;
+
+  line-height: 1.86;
+
+  color: #5f5b53;
+}
+.popular .course-item .foot {
+  margin-top: 12px;
+}
+.popular .course-item .price {
+  font-weight: 600;
+
+  font-size: 18px;
+
+  line-height: 1.67;
+
+  color: #171100;
+}
+.popular .course-item .btn-book {
+  border: none;
+}
+.popular .course-item .btn-book:hover {
+  background-color: var(--primary-color);
 }
