--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,145 +1,125 @@
 * {
   box-sizing: border-box;
 }
-
 :root {
   --font-heading: "Sen", sans-serif;
   --primary-color: #ffb900;
 }
-
 html {
   font-size: 62.5%;
 }
-
-/* khôi phục lại cỡ chữ mặc định theo rem */
 body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
 }
-/* =================common================== */
 a {
   text-decoration: none;
 }
-
 .heading-lv2 {
-  color: #171100;
   font-family: var(--font-heading);
-  font-size: 3.8rem;
   font-weight: 700;
-  line-height: 1.27;
-  letter-spacing: -0.76px;
-}
 
+  font-size: 38px;
+
+  line-height: 1.27;
+  letter-spacing: -2%;
+}
 .btn {
   display: inline-block;
   min-width: 118px;
-  padding: 0 16px;
   line-height: 50px;
+  padding: 0px 16px;
   color: #fff;
-  text-align: center;
-  font-size: 1.6rem;
   font-weight: 600;
-  border-radius: 999px;
+  border-radius: 9999px;
+  font-size: 1.6rem;
   background: #171100;
+  text-align: center;
 }
-
 .btn:hover {
-  cursor: pointer;
   opacity: 0.9;
+  cursor: pointer;
 }
-
 .main-content {
   width: 1170px;
   max-width: calc(100% - 48px);
   margin-left: auto;
   margin-right: auto;
 }
-
 .line-clamp {
   display: -webkit-box;
   -webkit-line-clamp: var(--line-clamp, 1);
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-
 .line-clamp.line-2 {
   --line-clamp: 2;
 }
-
 .break-all {
   word-break: break-all;
 }
-/* =================header================== */
+/* ===================header=================== */
 .header {
-  background: #fffcf4;
+  background-color: #fffcf4;
 }
-
 .header.fixed {
-  z-index: 1;
   position: sticky;
   top: -28px;
+  z-index: 1;
 }
 .header .body {
   display: flex;
   align-items: center;
-  padding: 36px 0 8px;
+  padding: 36px 0px 8px;
 }
-
 .nav {
   margin-left: auto;
 }
 .nav ul {
   display: flex;
 }
-
 .nav a {
-  position: relative;
   color: #5f5b53;
   font-size: 1.6rem;
+  letter-spacing: 0%;
   padding: 8px 21px;
+  position: relative;
 }
-
 .nav li.active a,
 .nav a:hover {
   color: #171100;
   /* font-weight: 600; */
   text-shadow: 1px 0 0 currentColor;
 }
-
 .nav li.active a::after {
   position: absolute;
-  left: 21px;
-  bottom: 6px;
-  display: block;
   content: "";
   width: 12px;
   height: 2px;
+  background-color: #171100;
   border-radius: 1px;
-  background: #171100;
+  display: block;
+  left: 21px;
+  bottom: 6px;
 }
-
 .header .btn-sign-up {
   min-width: 144px;
 }
-
 .header .action {
   margin-left: 49px;
 }
-
-/* ================hero================== */
+/* ===============hero============== */
 .hero {
   padding: 56px 0 65px;
-  background: #fffcf4;
+  background-color: #fffcf4;
 }
-
 .hero .body {
   display: flex;
 }
-
-/* ========= hero left ============== */
+/* ==========khối bên trái=========== */
 .hero .media-block {
-  position: relative;
   width: 48%;
+  position: relative;
 }
 
 .hero .media-block .img {
@@ -148,27 +128,23 @@ a {
   object-fit: cover;
   border-radius: 20px;
 }
-
 .hero .hero-summary {
-  padding: 24px;
-  width: 270px;
   position: absolute;
   bottom: 48px;
   right: 0;
-  border-radius: 12px;
   background: #fff;
+  border-radius: 12px;
   box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+  width: 270px;
+  padding: 24px;
 }
-
 .hero-summary .item {
   display: flex;
   align-items: center;
 }
-
 .hero-summary .item + .item {
   margin-top: 22px;
 }
-
 .hero-summary .icon {
   width: 48px;
   height: 48px;
@@ -178,190 +154,164 @@ a {
   align-items: center;
   background-color: #fff9e8;
 }
-
 .hero-summary .icon2 {
   background-color: #fcefff;
 }
-
 .hero-summary .icon3 {
   background-color: #ebeaff;
 }
-
 .hero-summary .info {
   margin-left: 16px;
 }
-
 .hero-summary .label {
+  font-size: 14px;
+  line-height: 1.86;
   color: #5f5b53;
-  font-size: 1.4rem;
-  line-height: 1.86; /* 185.714% */
 }
-
 .hero-summary .title {
   color: #171100;
-  font-size: 1.8rem;
   font-weight: 600;
-  line-height: 1.67; /* 166.667% */
+  font-size: 18px;
+  line-height: 1.67;
 }
-
-/* =========== hero right======== */
+/* ============khối bên phải============== */
 .hero .content-block {
   width: 52%;
   padding-left: 130px;
   padding-top: 64px;
 }
-
 .hero .heading {
-  color: #171100;
   font-family: var(--font-heading);
-  font-size: 5.8rem;
   font-weight: 700;
+  font-size: 50px;
   line-height: 1.17;
-  letter-spacing: -1.16px;
+  letter-spacing: -2%;
+  color: #171100;
 }
-
 .hero .desc {
   margin-top: 22px;
-  color: #5f5b53;
-  font-size: 1.8rem;
+  font-weight: 400;
+  font-size: 18px;
   line-height: 1.67;
 }
-
 .hero .cta-group {
+  margin-top: 38px;
   display: flex;
   align-items: center;
-  margin-top: 38px;
 }
-
 .hero-cta {
   min-width: 180px;
   line-height: 64px;
   background-color: var(--primary-color);
 }
-
 .hero .watch-video {
-  margin-left: 28px;
   border: none;
-  background: transparent;
+  background-color: transparent;
   display: flex;
+  margin-left: 29px;
   align-items: center;
   cursor: pointer;
 }
-
 .hero .watch-video .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 40px;
   height: 40px;
   border-radius: 40px;
   background: #fff;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.07);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 .hero .watch-video span {
-  margin-left: 14px;
   color: #171100;
-  font-size: 1.8rem;
   font-weight: 600;
+  font-size: 18px;
   line-height: 1.67;
+  margin-left: 14px;
 }
-
 .hero .desc-recent {
   margin-top: 48px;
 }
-
 .hero .stats {
   margin-top: 8px;
 }
-
 .hero .stats strong {
-  margin-right: 15px;
-  color: #171100;
   font-family: var(--font-heading);
-  font-size: 4.4rem;
   font-weight: 700;
+  font-size: 44px;
   line-height: 1.23;
+  margin-right: 15px;
 }
-
 .hero .stats strong:nth-child(2) {
-  margin-left: 28px;
+  margin-left: 22px;
 }
-
-/* ================ popular ================== */
+/* ===========popular========== */
 .popular {
   padding: 65px 0;
+
   margin-top: 135px;
 }
-
-.popular-top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .popular-top .desc {
   margin-top: 16px;
   width: 458px;
+
+  font-weight: 400;
   color: #5f5b53;
-  font-size: 1.8rem;
+  font-size: 18px;
+
   line-height: 1.67;
 }
-
+.popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .popular-top .controls {
   display: flex;
   gap: 18px;
 }
-
-.popular-top .control-btn {
+.popular-top .controls-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: transparent;
+  background-color: transparent;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  color: var(--primary-color);
   border: 1px solid var(--primary-color);
+  color: var(--primary-color);
 }
-
-.popular-top .control-btn:hover {
-  background: var(--primary-color);
+.popular-top .controls-btn:hover {
+  background-color: var(--primary-color);
   color: #fff;
   cursor: pointer;
 }
-
-.popular .course-list {
-  display: flex;
-  gap: 30px;
-  margin-top: 55px;
-}
-
 .popular .course-item {
-  flex: 1;
   border-radius: 12px;
-  border: 1px solid #e2dfda;
   background: #fff;
+  border: 1px solid #e2dffa;
+  flex: 1;
 }
-
 .popular .course-item:hover {
   border: 1px solid transparent;
   border-radius: 12px;
-  background: #fff;
-  box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+  background-color: #fff;
+  box-shadow: 0 18px 36px 0 rgba(0, 0, 0, 0.05);
 }
-
-.popular .course-item .thumb {
+.popular .course-list {
+  display: flex;
+  margin-top: 55px;
+  gap: 30px;
+}
+.popular .course-item .thump {
+  /* width: 100%; */
   border-radius: 12px 12px 0px 0px;
+  width: 370px;
   height: 278px;
-  object-fit: cover;
-  width: 100%;
 }
-
 .popular .course-item .info {
   padding: 16px 22px 22px;
 }
-
 .popular .course-item .foot,
 .popular .course-item .rating,
 .popular .course-item .head {
@@ -369,43 +319,110 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-
 .popular .course-item .title a {
   color: #171100;
-  font-size: 1.8rem;
   font-weight: 600;
+
+  font-size: 18px;
+
   line-height: 1.67;
 }
-
 .popular .rating .value {
   margin-left: 6px;
   color: #fea31b;
+  font-weight: 400;
+
   font-size: 16px;
+
   line-height: 1.75;
 }
-
 .popular .course-item .desc {
-  margin-top: 6px;
-  color: #5f5b53;
-  font-size: 1.4rem;
-  line-height: 1.86;
-}
+  font-weight: 400;
 
+  font-size: 14px;
+
+  line-height: 1.86;
+
+  color: #5f5b53;
+}
 .popular .course-item .foot {
   margin-top: 12px;
 }
-
 .popular .course-item .price {
-  color: #171100;
-  font-size: 1.8rem;
   font-weight: 600;
-  line-height: 1.67;
-}
 
+  font-size: 18px;
+
+  line-height: 1.67;
+
+  color: #171100;
+}
 .popular .course-item .btn-book {
   border: none;
 }
-
 .popular .course-item .btn-book:hover {
-  background: var(--primary-color);
+  background-color: var(--primary-color);
+}
+/* ===========feedback========== */
+.feedback {
+  margin-top: 135px;
+  padding: 96px 0px;
+  background-color: #2e2100;
+}
+.feedback-item {
+  display: flex;
+}
+.feedback-item .avatar {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.feedback-item .info .member-name {
+  margin-top: 18px;
+  font-family: var(--font-heading);
+  font-weight: 700;
+  color: #f7f7f7;
+  font-size: 24px;
+  line-height: 1.42;
+}
+.feedback-item .info .desc {
+  color: #bfbcb2;
+  margin-top: 4px;
+
+  font-weight: 400;
+
+  font-size: 14px;
+
+  line-height: 1.86;
+}
+.feedback-item .dots{
+  display: flex;
+  margin-top: 28px;
+  gap: 6px;
+}
+.feedback-item .dot{
+  background-color: #634700;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.feedback-item .dot.active{
+  background-color: var(--primary-color);
+  cursor: default;
+}
+.feedback-item .content{
+  width: 66%;
+  margin-left: auto;
+}
+.feedback-item blockquote{
+color: #fff;
+
+font-style: Italic;
+font-size: 26px;
+
+line-height: 1.54;
+
+
 }
