p9 hoàn thiện phần feedback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,8 +369,13 @@ a {
   padding: 96px 0px;
   background-color: #2e2100;
 }
+.feedback-list{
+  display: flex;
+  overflow: hidden;
+}
 .feedback-item {
   display: flex;
+  flex-shrink: 0.22;
 }
 .feedback-item .avatar {
   width: 72px;
