--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,3 +431,49 @@ line-height: 1.54;
 
 
 }
+/* ===========features========== */
+.features{
+  margin-top: 135px;
+  padding: 65px 0px;
+}
+.features .body {
+  display: flex;
+  justify-content: space-between;
+}
+.features .images{
+  display: flex;
+  gap: 30px;
+}
+.features .images img{
+  width: 270px;
+  height: 405px;
+  object-fit: cover;
+  border-radius: 16px;
+  
+}
+.features .lower{
+  margin-top: 34px;
+}
+.features .content{
+  width: 41%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.features .desc{
+  margin-top: 16px; 
+
+
+font-size: 16px;
+
+line-height: 1.75;
+
+
+}
+.features .cta-btn{
+  margin-top: 32px;
+  width: 135px;
+  height: 50px;
+  flex-shrink: 0;
+  background: var(--primary-color);
+}
