p11 code features 2 -on top row-reverse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,7 +431,7 @@ line-height: 1.54;
 
 
 }
-/* ===========features========== */
+/* ===========features 1========== */
 .features{
   margin-top: 135px;
   padding: 65px 0px;
@@ -476,4 +476,18 @@ line-height: 1.75;
   height: 50px;
   flex-shrink: 0;
   background: var(--primary-color);
+}
+/* ===========features 2========== */
+.features-2nd{
+  margin-top: 70px;
+}
+.features-2nd .body{
+  flex-direction: row-reverse;
+}
+.features-2nd .content{
+  width: 49%;
+}
+.features-2nd .images img{
+  width: 470px;
+  width: 440px;
 }
