--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,7 @@ a {
   padding: 96px 0px;
   background-color: #2e2100;
 }
-.feedback-list{
+.feedback-list {
   display: flex;
   overflow: hidden;
 }
@@ -401,38 +401,36 @@ a {
 
   line-height: 1.86;
 }
-.feedback-item .dots{
+.feedback-item .dots {
   display: flex;
   margin-top: 28px;
   gap: 6px;
 }
-.feedback-item .dot{
+.feedback-item .dot {
   background-color: #634700;
   width: 6px;
   height: 6px;
   border-radius: 50%;
   cursor: pointer;
 }
-.feedback-item .dot.active{
+.feedback-item .dot.active {
   background-color: var(--primary-color);
   cursor: default;
 }
-.feedback-item .content{
+.feedback-item .content {
   width: 66%;
   margin-left: auto;
 }
-.feedback-item blockquote{
-color: #fff;
+.feedback-item blockquote {
+  color: #fff;
 
-font-style: Italic;
-font-size: 26px;
+  font-style: Italic;
+  font-size: 26px;
 
-line-height: 1.54;
-
-
+  line-height: 1.54;
 }
 /* ===========features 1========== */
-.features{
+.features {
   margin-top: 135px;
   padding: 65px 0px;
 }
@@ -440,37 +438,33 @@ line-height: 1.54;
   display: flex;
   justify-content: space-between;
 }
-.features .images{
+.features .images {
   display: flex;
   gap: 30px;
 }
-.features .images img{
+.features .images img {
   width: 270px;
   height: 405px;
   object-fit: cover;
   border-radius: 16px;
-  
 }
-.features .lower{
+.features .lower {
   margin-top: 34px;
 }
-.features .content{
+.features .content {
   width: 41%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.features .desc{
-  margin-top: 16px; 
+.features .desc {
+  margin-top: 16px;
 
+  font-size: 16px;
 
-font-size: 16px;
-
-line-height: 1.75;
-
-
+  line-height: 1.75;
 }
-.features .cta-btn{
+.features .cta-btn {
   margin-top: 32px;
   width: 135px;
   height: 50px;
@@ -478,16 +472,99 @@ line-height: 1.75;
   background: var(--primary-color);
 }
 /* ===========features 2========== */
-.features-2nd{
+.features-2nd {
   margin-top: 70px;
 }
-.features-2nd .body{
+.features-2nd .body {
   flex-direction: row-reverse;
 }
-.features-2nd .content{
+.features-2nd .content {
   width: 49%;
 }
-.features-2nd .images img{
+.features-2nd .images img {
   width: 470px;
   width: 440px;
+}
+/* =========Blogs=========== */
+.blogs {
+  margin-top: 135px;
+  padding: 96px 0px;
+  background: #fffcf4;
+}
+.blogs .blog-top {
+  text-align: center;
+}
+.blogs .blog-top .desc {
+  margin: 16px auto 0;
+  width: 448px;
+  color: #696262;
+  font-size: 16px;
+  line-height: 1.75;
+}
+
+.blogs .blog-list {
+  gap: 30px;
+  display: flex;
+  margin-top: 55px;
+}
+.blogs .item {
+  width: 33.33%;
+  height: 200px;
+
+  border-radius: 16px;
+  background: #fff;
+}
+.blogs .item:hover {
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.blogs .item .thumb {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 16px 16px 0 0;
+}
+.blogs .item .info {
+  padding: 20px 20px 28px;
+}
+.blogs .item .date {
+  display: inline-flex;
+  align-items: center;
+  color: #5f5b53;
+  font-size: 14px;
+  line-height: 1.86;
+  position: relative;
+  padding-bottom: 12px;
+}
+.blogs .item .date::before {
+  content: "";
+  margin-right: 4px;
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+}
+.blogs .item .date::after {
+  content: "";
+  left: 0;
+  bottom: 0;
+  display: inline-block;
+  right: -27px;
+  height: 1px;
+  border-radius: 0.5px;
+  background: #e2dfda;
+  position: absolute;
+}
+.blogs .item .title {
+  color: #171100;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.75;
+  margin-top: 12px;
+}
+.blogs .item .btn {
+  margin-top: 12px;
+}
+.blogs .item .btn:hover {
+  background-color: var(--primary-color);
 }
