--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,3 +587,69 @@ a {
   background: var(--primary-color);
   cursor: default;
 }
+/* ============footer========== */
+footer{
+  background: #2E2100;
+  padding: 96px 135px 0px;
+}
+.footer .row{
+  display: flex;
+  padding-bottom: 38px;
+  border-bottom: 1px solid #59554b;
+}
+.footer .row .column{
+  width: 21.6%;
+}
+.footer .row .column:first-child{
+  width: 35%;
+
+}
+.footer .desc{
+  margin-top: 18px;
+  max-width: 267px;
+  color: #bfbcb2;
+  font-size: 14px;
+  line-height: 1.86;
+}
+.footer .social{
+  display: flex;
+  gap: 18px;
+  margin-top: 18px;
+}
+.footer .title{
+  border-bottom: 1px solid #59554b;
+  display: inline-block;
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.75;
+  padding-bottom: 14px;
+  padding-right: 48px;
+}
+.footer .list{
+  margin-top: 28px;
+
+}
+.footer .list a{
+  display: inline-block;
+  margin-bottom: 12px;
+  color: #bfbcb2;
+  font-size: 14px;
+  line-height: 1.86;
+}
+.footer .list .li:last-child a{
+  margin-bottom: 0;
+}
+.footer .list strong{
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.86;
+}
+.footer .copyright{
+  padding: 28px 0;
+  color: #807d74;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.86;
+}
